fix: missing color "peach"

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,9 +15,6 @@
 }
 
 @layer base {
-  section {
-    @apply min-h-[90vh] bg-gradient-to-t from-peach-100 to-gray-100;
-  }
   h1 {
     @apply text-5xl font-bold;
   }
@@ -53,19 +50,19 @@
   }
 
   .box {
-    @apply bg-peach-20 p-8 tablet:p-12 rounded-lg border border-peach;
+    @apply bg-beige-200 p-8 tablet:p-12 rounded-lg border border-beige;
   }
 
   .btn {
-    @apply flex items-center justify-center gap-2 rounded px-5 py-3.5 capitalize text-grey-700;
+    @apply flex items-center justify-center gap-2 rounded px-5 py-3.5 capitalize text-gray-700;
   }
 
   .btn-primary {
-    @apply text-peach-100 bg-purple;
+    @apply text-beige bg-beige-600;
   }
 
   input,
   textarea {
-    @apply w-full rounded px-6 py-4 border border-peach-700 bg-peach-500 outline-none text-sm text-grey-700;
+    @apply w-full rounded px-6 py-4 border border-beige-700 bg-beige-500 outline-none text-sm text-gray-700;
   }
 }
